[package]
name = "photon"
version = "0.1.0"
authors = ["Newton Ni <nwtnni@gmail.com>"]
edition = "2018"

[features]
default = ["progress"]
stats = []
preview = ["sdl2"]
progress = []

[dependencies]
rand = "0.6.5"
rayon = "1.0.3"
sdl2 = { version = "0.32.1", optional = true }
crossbeam = "0.7.1"
lodepng = "2.4.2"
partition = "0.1.1"
termion = "1.5.1"
readonly = "0.1.4"
